# sphinx_replace_htmlpage_toctree

./: .gitignore  pyproject.toml  readme.md
sphinx_replace_htmlpage_toctree/: __init__.py
src/sphinx_replace_htmlpage_toctree/: __init__.py
test/: conf.py  index.rst
test/tutorial/: foo.rst  index.rst
